--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('code and build') {
             steps {
-               git 'https://github.com/ramyachetty/web-app.git'
+               git 'https://github.com/Sanjay-git07/web-app.git'
                sh 'mvn clean package'
             }
         }
